--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,4 +19,15 @@
     <string name="login">Login</string>
     <string name="logout">Logout</string>
     <string name="guest">Guest</string>
+
+    <!-- image strings -->
+    <string name="event_image">This is the name of the image</string>
+
+    <string name="default_web_client_id">Your_Web_Client_ID_From_Firebase</string>
+    <string name="error_email_empty">Please enter your email</string>
+    <string name="error_password_empty">Please enter your password</string>
+    <string name="auth_failed">Authentication failed</string>
+
+
+
 </resources>
