--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,8 +29,7 @@
     <string name="auth_failed">Authentication failed</string>
 
     <string name="account_created">Account created successfully</string>
-
-
+    <string name="favorite">Favourite</string>
 
 
 </resources>
