adding security features - last step of exercise 8

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,6 +30,8 @@
 
     <string name="account_created">Account created successfully</string>
     <string name="favorite">Favourite</string>
+    <string name="edit">Edit</string>
+    <string name="delete">Delete</string>
 
 
 </resources>
