--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -32,9 +32,7 @@
     <string name="favorite">Favourite</string>
     <string name="edit">Edit</string>
     <string name="delete">Delete</string>
-
-
-
+    <string name="event_photo">Photo of the event</string>
 
 
 </resources>
